https service addede

--- a/src/app/vehical-details/vehical-details.component.html
+++ b/src/app/vehical-details/vehical-details.component.html
@@ -6,11 +6,11 @@
      </tr>
      <tr>
         <td><label>Number</label></td>
-        <td><input [(ngModel)]="vehicle.vehicleNumber" placeholder="Number"/></td>
+        <td><input [(ngModel)]="vehicle.number" placeholder="Number"/></td>
       </tr>
       <tr>
           <td><label>Type</label></td>
-          <td><input [(ngModel)]="vehicle.Type" placeholder="Type"/></td>
+          <td><input [(ngModel)]="vehicle.type" placeholder="Type"/></td>
       </tr>
       <tr>
         <td><button (click)="goBack">Back</button></td>
