--- a/src/app/vehical-list-compoent/vehical-list-compoent.component.html
+++ b/src/app/vehical-list-compoent/vehical-list-compoent.component.html
@@ -5,8 +5,8 @@
   <tbody>
     <tr *ngFor="let vehicle of vehicles" routerLink="/detail/{{vehicle.id}}">
       <td>{{vehicle.id}}</td>
-      <td>{{vehicle.vehicleNumber}}</td>
-      <td>{{vehicle.Type}}</td>
+      <td>{{vehicle.number}}</td>
+      <td>{{vehicle.type}}</td>
     </tr>
   </tbody>
 </table>
