--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <a *ngFor="let vehicle of vehicles" class="col-1-4"
   routerLink="/detail/{{vehicle.id}}">
     <div class="module hero">
-      <h4>{{vehicle.vehicleNumber}}</h4>
+      <h4>{{vehicle.number}}</h4>
     </div>
   </a>
 </div>
